--- a/views/index.jade
+++ b/views/index.jade
@@ -2,6 +2,9 @@ html
 	include ./includes/head.jade
 	body
 		include ./includes/nav.jade
+
+		div.container
+			iframe(style="width:100%; padding:0; border:0; height:120px;", src="http://widget.ethereumwisdom.com/#/SHIFT")
 		div.container(id="stats")
 			span Loading...
 
