--- a/views/stats.jade
+++ b/views/stats.jade
@@ -31,7 +31,9 @@ div.row
 								div.col-md-4
 									span(style="font-size: 300%; color: #fff").glyphicon.text-primary.glyphicon-plus
 								div.col-md-8
-									span Shift sum
+									span
+										span= stats.coin
+										span sum
 									br
 									span= stats.shift
 
