--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -1,5 +1,5 @@
 head
-	title Shift Lobby
+	title= coin + ' Lobby'
 	link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
 	link(rel='stylesheet', href='https://bootswatch.com/flatly/bootstrap.min.css')
 	script(src='https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
