--- a/views/includes/nav.jade
+++ b/views/includes/nav.jade
@@ -6,7 +6,7 @@ nav.navbar.navbar-default
 				span.icon-bar
 				span.icon-bar
 				span.icon-bar
-			a.navbar-brand(href="/") Shift Lobby
+			a.navbar-brand(href="/")= coin + ' Lobby'
 		div.navbar-collapse.collapse(id="navbar")
 			ul.nav.navbar-nav
 				li.active
