--- a/views/stats.jade
+++ b/views/stats.jade
@@ -33,7 +33,7 @@ div.row
 								div.col-md-8
 									span
 										span= stats.coin
-										span sum
+										span Sum
 									br
 									span= stats.shift
 
