--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -1,4 +1,8 @@
 div(align="center")
-    i Donate or vote to 7725849364280821971S (davideg)
+    if coin == 'LSK'
+        i Donate or vote to 2324852447570841050L (dakk)
+    else
+        i Donate or vote to 7725849364280821971S (davideg)
+    
     br
     a(href="http://github.com/dakk/shift-lobby", target="_blank") Github
