--- a/views/stats.jade
+++ b/views/stats.jade
@@ -14,17 +14,6 @@ div.row
 									span &nbsp; outside)
 
 				div.col-md-3
-					div.panel.panel-info
-						div.panel-heading
-							div.row
-								div.col-md-4
-									span(style="font-size: 300%; color: #fff").glyphicon.text-primary.glyphicon-book
-								div.col-md-8
-									span Mined
-									br
-									span= stats.mined
-
-				div.col-md-3
 					div.panel.panel-warning
 						div.panel-heading
 							div.row
@@ -37,7 +26,29 @@ div.row
 									br
 									span= stats.shift
 
-				div.col-md-3
+				div.col-md-2
+					div.panel.panel-info
+						div.panel-heading
+							div.row
+								div.col-md-4
+									span(style="font-size: 300%; color: #fff").glyphicon.text-primary.glyphicon-book
+								div.col-md-8
+									span Mined
+									br
+									span= stats.mined
+
+				div.col-md-2
+					div.panel.panel-info
+						div.panel-heading
+							div.row
+								div.col-md-4
+									span(style="font-size: 300%; color: #fff").glyphicon.text-primary.glyphicon-sort-by-attributes-alt
+								div.col-md-8
+									span Height
+									br
+									span= height
+
+				div.col-md-2
 					div.panel.panel-danger
 						div.panel-heading
 							div.row
