--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -1,8 +1,11 @@
 div(align="center")
     if coin == 'LSK'
-        i Donate or vote to 2324852447570841050L (dakk)
+        i Developed by dakk (2324852447570841050L)
+        if all
+            br
+            i with server by gregorst, domain by redsn0w and the support of the Italian Lisk Community. 
     else
-        i Donate or vote to 7725849364280821971S (davideg)
+        i Developed by davideg (7725849364280821971S)
     
     br
-    a(href="http://github.com/dakk/shift-lobby", target="_blank") Github
+    a(href="http://github.com/dakk/lisk-delegate-monitor", target="_blank") Github
