--- a/views/index.jade
+++ b/views/index.jade
@@ -47,6 +47,17 @@ html
 							div.panel-body
 								div(id="votes")
 									span Loading...
+								
+				div.panel.panel-success
+					div.panel-heading#heading4(role="tab")
+						h4.panel-title
+							a(role="button", data-toggle="collapse", data-parent="#accordion", href="#collapse4", aria-expanded="true", aria-controls="collapse2") 
+								span.glyphicon.glyphicon-chevron-down
+								span &nbsp;Donations and votes
+					div.panel-collapse.collapse#collapse4(role="tabpanel", aria-labelledby="heading4")
+						div.panel-body
+							div(id="donations")
+								span Loading...
 
 		include ./includes/footer.jade
 
@@ -70,10 +81,15 @@ html
 			$("#ranklist").load("/ranklist?key=" + getUrlParameter ('key'));
 			$("#turns").load("/turns?key=" + getUrlParameter ('key'));
 			$("#votes").load("/votes?key=" + getUrlParameter ('key'));
+			$("#donations").load("/donations?key=" + getUrlParameter ('key'));
 
 			setInterval (function () {
 				$("#stats").load("/stats?key=" + getUrlParameter ('key'));
 				$("#ranklist").load("/ranklist?key=" + getUrlParameter ('key'));
 				$("#turns").load("/turns?key=" + getUrlParameter ('key'));
-				$("#votes").load("/votes?key=" + getUrlParameter ('key'));
 			}, 9000);
+
+			setInterval (function () {
+				$("#votes").load("/votes?key=" + getUrlParameter ('key'));
+				$("#donations").load("/donations?key=" + getUrlParameter ('key'));
+			}, 90000);
