--- a/views/index.jade
+++ b/views/index.jade
@@ -15,6 +15,17 @@ html
 		div.container
 			div.panel-group#accordion(role="tablist", aria-multiselectable="true")
 				div.panel.panel-success
+					div.panel-heading#heading4(role="tab")
+						h4.panel-title
+							a(role="button", data-toggle="collapse", data-parent="#accordion", href="#collapse4", aria-expanded="true", aria-controls="collapse2") 
+								span.glyphicon.glyphicon-chevron-down
+								span &nbsp;Donations and votes
+					div.panel-collapse.collapse.in#collapse4(role="tabpanel", aria-labelledby="heading4")
+						div.panel-body
+							div(id="donations")
+								span Loading...
+
+				div.panel.panel-success
 					div.panel-heading#heading1(role="tab")
 						h4.panel-title
 							a(role="button", data-toggle="collapse", data-parent="#accordion", href="#collapse1", aria-expanded="true", aria-controls="collapse1") 
@@ -48,16 +59,6 @@ html
 								div(id="votes")
 									span Loading...
 								
-				div.panel.panel-success
-					div.panel-heading#heading4(role="tab")
-						h4.panel-title
-							a(role="button", data-toggle="collapse", data-parent="#accordion", href="#collapse4", aria-expanded="true", aria-controls="collapse2") 
-								span.glyphicon.glyphicon-chevron-down
-								span &nbsp;Donations and votes
-					div.panel-collapse.collapse#collapse4(role="tabpanel", aria-labelledby="heading4")
-						div.panel-body
-							div(id="donations")
-								span Loading...
 
 		include ./includes/footer.jade
 
@@ -83,10 +84,19 @@ html
 			$("#votes").load("/votes?key=" + getUrlParameter ('key'));
 			$("#donations").load("/donations?key=" + getUrlParameter ('key'));
 
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-43862044-19', 'auto');
+			ga('send', 'pageview');
+
 			setInterval (function () {
 				$("#stats").load("/stats?key=" + getUrlParameter ('key'));
 				$("#ranklist").load("/ranklist?key=" + getUrlParameter ('key'));
 				$("#turns").load("/turns?key=" + getUrlParameter ('key'));
+				ga('send', 'pageview');
 			}, 9000);
 
 			setInterval (function () {
