--- a/views/donations.jade
+++ b/views/donations.jade
@@ -1,5 +1,9 @@
-p Hi, I'm Davide (dakk is my delegate name, 2324852447570841050L is my delegate address); if you like this project and my other projects, and you want new fresh projects for the lisk ecosystem, your vote is appreciated.
+p Hi, I'm Davide (
+    a(href="https://forum.lisk.io/viewtopic.php?f=48&t=1094", target="_blank") dakk 
+    span is my delegate name, 2324852447570841050L is my delegate address); if you like this project and my other projects, and you want new fresh projects for the lisk ecosystem, your vote is really appreciated.
 
 p Thanks for all my voters: 
     each v in donationVotes
         span= v + ' '
+
+p A special thanks to gregorst for the server, redsn0w for the domain and the whole Italian Lisk Community. 
