--- a/views/index.jade
+++ b/views/index.jade
@@ -5,9 +5,9 @@ html
 
 		div.container
 			if coin == 'SHIFT'
-				iframe(style="width:100%; padding:0; border:0; height:120px;", src="http://widget.ethereumwisdom.com/#/#{coin}")
+				iframe(style="width:100%; padding:0; border:0; height:120px;", src="https://widget.ethereumwisdom.com/#/#{coin}")
 			else
-				iframe(style="width:100%; padding:0; border:0; height:195px;", src="http://widget.ethereumwisdom.com/#/#{coin}")
+				iframe(style="width:100%; padding:0; border:0; height:195px;", src="https://widget.ethereumwisdom.com/#/#{coin}")
 			br
 		div.container(id="stats")
 			span Loading...
