--- a/views/donations.jade
+++ b/views/donations.jade
@@ -7,3 +7,12 @@ p Thanks for all my voters:
         span= v + ' '
 
 p A special thanks to gregorst for the server, redsn0w for the domain and the whole Italian Lisk Community. 
+
+p Main supporters (for donations, in random order):&nbsp;
+    b ondin,&nbsp;
+    b gregorst,&nbsp;
+    b redsn0w,&nbsp;
+    b corsaro,&nbsp;
+    b anamix,&nbsp;
+    b splatters,&nbsp;
+    b liskit.&nbsp;
