--- a/views/delegate.jade
+++ b/views/delegate.jade
@@ -1,74 +1,80 @@
+br
 div.row
 	div.col-md-2
 		div.panel.panel-success
 			div.panel-heading
 				span Rank
 				br
-				span= delegateobj.rate
+				h1= delegateobj.rate
 
 	div.col-md-2
 		div.panel.panel-success
 			div.panel-heading
 				span Approval
 				br
-				span= delegateobj.approval
+				h1= delegateobj.approval
 
 	div.col-md-2
 		div.panel.panel-success
 			div.panel-heading
 				span Productivity
 				br
-				span= delegateobj.productivity
+				h1= delegateobj.productivity
 
 	div.col-md-2
-		div.panel.panel-success
+		div.panel.panel-danger
 			div.panel-heading
 				span Forged blocks
 				br
-				span= delegateobj.producedblocks
+				h1= delegateobj.producedblocks
 
 	div.col-md-2
-		div.panel.panel-success
+		div.panel.panel-danger
 			div.panel-heading
 				span Missed blocks
 				br
-				span= delegateobj.missedblocks
+				h1= delegateobj.missedblocks
 
 	div.col-md-2
-		div.panel.panel-success
+		div.panel.panel-info
 			div.panel-heading
 				span Alive
 				br
 				span
 					if alive == true
-						span(style="color: #009900").glyphicon.text-primary.glyphicon-ok
+						h1 Yes
 					else
-						span(style="color: #990000").glyphicon.text-primary.glyphicon-remove
+						h1 No
 
-	div.col-md-2
-		div.panel.panel-success
+	div.col-md-3
+		div.panel.panel-warning
 			div.panel-heading
 				span Balance
 				br
-				span= balance
+				h3= balance
 
-	div.col-md-2
-		div.panel.panel-success
-			div.panel-heading
-				span Forged
-				br
-				span= forged
 
-	div.col-md-2
-		div.panel.panel-success
+
+	div.col-md-6
+		div.panel.panel-default
 			div.panel-heading
 				span Blocks to forge
 				br
 				each d in turns
 					if d.delegate == delegate
-						span= d.blocks
-						br
-						if d.avgtime <= 60
-							span= d.avgtime + ' sec'
-						else
-							span= Math.floor (d.avgtime / 60) + ' min and ' + (d.avgtime % 60) + ' sec'
+						h3
+							span= d.blocks
+							span &nbsp;blocks&nbsp;(
+							if d.avgtime <= 60
+								span= d.avgtime + ' sec)'
+							else
+								span= Math.floor (d.avgtime / 60) + ' min and ' + (d.avgtime % 60) + ' sec)'
+
+
+	div.col-md-3
+		div.panel.panel-warning
+			div.panel-heading
+				span Forged
+				br
+				h3= forged
+br
