--- a/views/indexdelegate.jade
+++ b/views/indexdelegate.jade
@@ -4,8 +4,7 @@ html
 		include ./includes/nav.jade
 
 		div.container
-			h1= 'Delegate: '+delegate
-
+			//- h2= 'Delegate: '+delegate
 			div(id="delegate") Loading...
 
 
