--- a/views/votes.jade
+++ b/views/votes.jade
@@ -1,13 +1,14 @@
 if !all
-	table.table.table-striped.table-condensed.table-hover
-		each row in votes
-			tr
-				each cell in row
-					td(align="center")
-						if cell == true
-							span(style="color: #009900").glyphicon.text-primary.glyphicon-ok
-						if cell == false
-							span(style="color: #990000").glyphicon.text-primary.glyphicon-remove
-						if cell != false && cell != true
-							span= cell
+	div(style="overflow-x: scroll; height: 100%; width: 100%")
+		table.table.table-striped.table-responsive.table-condensed.table-hover
+			each row in votes
+				tr
+					each cell in row
+						td(align="center")
+							if cell == true
+								span(style="color: #009900").glyphicon.text-primary.glyphicon-ok
+							if cell == false
+								span(style="color: #990000").glyphicon.text-primary.glyphicon-remove
+							if cell != false && cell != true
+								span= cell
 								
