Shift ticker fix

--- a/views/delegate.jade
+++ b/views/delegate.jade
@@ -82,7 +82,8 @@ table.table.table-striped.table-condensed.table-hover
 	thead
 		tr 
 			th Period
-			th Forged LSK
+			th Forged 
+				span= coin
 			th Forged BTC
 			th Forged USD
 			th Forged EUR
