--- a/views/turns.jade
+++ b/views/turns.jade
@@ -6,7 +6,8 @@ table.table.table-striped.table-condensed.table-hover
 		th Productivity
 		th Forged blocks
 		th Missed blocks
-		th Forged (LSK)
+		th Forged 
+			span= coin
 		th Status
 
 	each d in turns
